# mecanum_robot

./: .gitignore  CMakeLists.txt  README.md  mecanum_robot.xml  package.xml
config/: controllers.yaml  gz_bridge.yaml  joy_config.yaml  mapper_params_online_async.yaml  nav2_params.yaml  rviz.rviz
description/: distance_sensor.xacro  gazebo_control.xacro  gazebo_friction.xacro  lidar.xacro  materials.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardware/: mecanum_system.cpp  serial_comm.cpp  serial_protocol.cpp
hardware/include/mecanum_robot/: mecanum_system.hpp  serial_comm.hpp  serial_protocol.hpp
launch/: joy_controller.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsa.launch.py  rviz.launch.py
maps/: test1_save.pgm  test1_save.yaml  test1_serialize.data
worlds/: test1.sdf
